--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -81,6 +81,23 @@ tests:
                 name: "my-secret"
                 key: .kubeconfig
 
+  - it: "sets redis caching env vars when cache type is redis"
+    set:
+      imageSbomExtractor.cache.type: "redis"
+    asserts:
+      - not: true
+        isEmpty:
+          path: spec.template.spec.containers[1].env[34]
+      - isSubset:
+          path: spec.template.spec.containers[1].env[34]
+          content:
+            name: ANALYZER_CACHE_REDIS_TTL
+            valueFrom:
+              configMapKeyRef:
+                key: "cache_redis_ttl"
+                name: "test-release-cluster-scanner"
+                optional: true
+
   - it: "has Recreate rollout strategy"
     asserts:
       - equal:
