--- a/charts/registry-scanner/tests/configmap_test.yaml
+++ b/charts/registry-scanner/tests/configmap_test.yaml
@@ -119,6 +119,7 @@ tests:
       - matchRegex:
           path: data['config.yaml']
           pattern: "temporaryVolumeSizeLimit: 2Gi"
+
   - it: listAllowRegions variable reach the configmap if is set
     set:
       config:
@@ -128,3 +129,13 @@ tests:
       - matchRegex:
           path: data['config.yaml']
           pattern: allowListRegions:\n\s*- us-west-1
+
+  - it: allowListMemberAccountIDs variable reach the configmap if is set
+    set:
+      config:
+        aws:
+          allowListMemberAccountIDs: [123456789]
+    asserts:
+      - matchRegex:
+          path: data['config.yaml']
+          pattern: allowListMemberAccountIDs:\n\s*- 123456789
