--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -22,6 +22,6 @@ data:
   {{- if .Values.features.kspmAdmissionController}}
   SERVICE_PORT: "{{.Values.webhook.v2.container.port}}"
   CERT_LOCATION: /cert
-  EXTERNAL_NATS_URL: {{.Values.natsURL}}
+  EXTERNAL_NATS_URL: "wss://{{.Values.natsURL}}:443"
   NATS_INSECURE: "{{.Values.webhook.v2.nats.natsInsecure}}"
   {{- end}}
