--- a/charts/agent/templates/configmap.yaml
+++ b/charts/agent/templates/configmap.yaml
@@ -17,6 +17,9 @@ data:
 {{- end }}
 {{- include "agent.connectionSettings" . | trim | nindent 4 }}
 {{- include "agent.planSettings" . | trim | nindent 4 }}
+{{/* Calculate the leaderElection/k8s_colstart information.
+     The computed/combined results are merged with any overrides specified
+     in sysdig.settings and will be rendered with that block */}}
 {{- include "agent.leaderElection" . }}
 {{- include "agent.disableCaptures" . | nindent 4 }}
 {{- include "agent.logSettings" . }}
