--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -66,7 +66,7 @@ tests:
 
   - it: "sets kubeconfig env var if set"
     set:
-      global.scannerMode: "multi"
+      scannerMode: "multi"
       runtimeStatusIntegrator.multiCluster.kubeconfigSecretName: "my-secret"
     asserts:
       - not: true
@@ -106,7 +106,7 @@ tests:
 
   - it: "sets the local registry secrets when in local mode"
     set:
-      global.scannerMode: "local"
+      scannerMode: "local"
       runtimeStatusIntegrator.localCluster:
         rbac:
           allowedPullSecrets:
@@ -129,7 +129,7 @@ tests:
 
   - it: "does not set the local registry secrets when in multi mode"
     set:
-      global.scannerMode: "multi"
+      scannerMode: "multi"
       runtimeStatusIntegrator.multiCluster.kubeconfigSecretName: "my-secret"
       runtimeStatusIntegrator.localCluster:
         rbac:
@@ -153,7 +153,7 @@ tests:
 
   - it: "fails if the onPremCompatibilityVersion is not set and the runtimeStatusIntegrator version is incorrect"
     set:
-      global.onPremCompatibilityVersion: null
+      onPremCompatibilityVersion: null
       runtimeStatusIntegrator.image.tag: "0.3.4"
       imageSbomExtractor.image.tag: "1.3.4"
     asserts:
@@ -162,7 +162,7 @@ tests:
 
   - it: "fails if the onPremCompatibilityVersion is not set and the imageSbomExtractor version is incorrect"
     set:
-      global.onPremCompatibilityVersion: null
+      onPremCompatibilityVersion: null
       runtimeStatusIntegrator.image.tag: "1.3.4"
       imageSbomExtractor.image.tag: "0.1.0"
     asserts:
@@ -171,7 +171,7 @@ tests:
 
   - it: "fails if the onPremCompatibilityVersion is set to 6.2 and the runtimeStatusIntegrator version is incorrect"
     set:
-      global.onPremCompatibilityVersion: "6.2"
+      onPremCompatibilityVersion: "6.2"
       runtimeStatusIntegrator.image.tag: "4.3.4"
       imageSbomExtractor.image.tag: "0.3.4"
     asserts:
@@ -180,7 +180,7 @@ tests:
 
   - it: "fails if the onPremCompatibilityVersion is not set to 6.2 the imageSbomExtractor version is incorrect"
     set:
-      global.onPremCompatibilityVersion: "6.2"
+      onPremCompatibilityVersion: "6.2"
       runtimeStatusIntegrator.image.tag: "0.0.1"
       imageSbomExtractor.image.tag: "6.1.0"
     asserts:
@@ -189,7 +189,7 @@ tests:
 
   - it: "fails if the onPremCompatibilityVersion is set to 6.3 and the runtimeStatusIntegrator version is incorrect"
     set:
-      global.onPremCompatibilityVersion: "6.3"
+      onPremCompatibilityVersion: "6.3"
       runtimeStatusIntegrator.image.tag: "0.3.4"
       imageSbomExtractor.image.tag: "1.3.4"
     asserts:
@@ -198,7 +198,7 @@ tests:
 
   - it: "fails if the onPremCompatibilityVersion is not set to 6.3 the imageSbomExtractor version is incorrect"
     set:
-      global.onPremCompatibilityVersion: "6.3"
+      onPremCompatibilityVersion: "6.3"
       runtimeStatusIntegrator.image.tag: "1.3.4"
       imageSbomExtractor.image.tag: "0.1.0"
     asserts:
@@ -207,7 +207,7 @@ tests:
 
   - it: "succeeds if the onPremCompatibilityVersion is not set and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
     set:
-      global.onPremCompatibilityVersion: null
+      onPremCompatibilityVersion: null
       runtimeStatusIntegrator.image.tag: "2.3.4"
       imageSbomExtractor.image.tag: "1.0.0"
     asserts:
@@ -220,7 +220,7 @@ tests:
 
   - it: "succeeds if the onPremCompatibilityVersion is set to 6.2 and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
     set:
-      global.onPremCompatibilityVersion: "6.2"
+      onPremCompatibilityVersion: "6.2"
       runtimeStatusIntegrator.image.tag: "0.3.4"
       imageSbomExtractor.image.tag: "0.9.10"
     asserts:
@@ -233,7 +233,7 @@ tests:
 
   - it: "succeeds if the onPremCompatibilityVersion is set to 6.3 and the runtimeStatusIntegrator and imageSbomExtractor versions are correct"
     set:
-      global.onPremCompatibilityVersion: "6.3"
+      onPremCompatibilityVersion: "6.3"
       runtimeStatusIntegrator.image.tag: "2.3.4"
       imageSbomExtractor.image.tag: "1.0.0"
     asserts:
