--- a/charts/agent/templates/configmap-deployment.yaml
+++ b/charts/agent/templates/configmap-deployment.yaml
@@ -32,7 +32,10 @@ data:
       enabled: false
     statsd:
       enabled: false
-{{- include "agent.k8sColdStart" . | nindent 4 }}
+{{/* Calculate the leaderElection/k8s_colstart information.
+     The computed/combined results are merged with any overrides specified
+     in sysdig.settings and will be rendered with that block */}}
+{{- include "agent.leaderElection" . }}
 {{ include "agent.disableCaptures" . | nindent 4 }}
 {{- $_ := mergeOverwrite .Values.secure (dict "enabled" false) }}
 {{- (include "agent.secureFeatures" .) | nindent 4 }}
