--- a/charts/admission-controller/tests/global_overrides_test.yaml
+++ b/charts/admission-controller/tests/global_overrides_test.yaml
@@ -138,3 +138,42 @@ tests:
           path: data.SECURE_URL
           value: https://eu1.app.sysdig.com
         template: webhook/configmap.yaml
+  - it: check imagePullSecrets with global
+    documentIndex: 0
+    set:
+      global:
+        image:
+          pullSecrets:
+          - test
+        sysdig:
+          secureAPITokenSecret: standard_token
+      clusterName: test-k8s
+    asserts:
+      - equal:
+          path: spec.template.spec.imagePullSecrets
+          value:
+            - test
+    templates:
+      - scanner/deployment.yaml
+      - webhook/deployment.yaml
+  - it: check imagePullSecrets with legacy
+    documentIndex: 0
+    set:
+      global:
+        sysdig:
+          secureAPITokenSecret: standard_token
+      clusterName: test-k8s
+      scanner:
+        imagePullSecrets:
+          - test
+      webhook:
+        imagePullSecrets:
+          - test
+    asserts:
+      - equal:
+          path: spec.template.spec.imagePullSecrets
+          value:
+            - test
+    templates:
+      - scanner/deployment.yaml
+      - webhook/deployment.yaml
