--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -14,6 +14,10 @@ global:
     region: "us1"
   # Global HTTP Proxy settings.
   proxy: {}
+  # Global image settings.
+  image:
+    pullSecrets: []
+    pullPolicy: ""
 
 # **required**
 # <br/> Cluster Name which appear on Secure UI
