--- a/charts/rapid-response/values.yaml
+++ b/charts/rapid-response/values.yaml
@@ -3,6 +3,9 @@ global:
   sysdig:
     region: "us1"
   proxy: {}
+  image:
+    pullSecrets: []
+    pullPolicy: ""
 
 sysdig:
   # Required: You need your Sysdig access key before running agents, either specifying 'accessKey' here, or using 'existingAccessKeySecret'
