--- a/charts/agent/templates/deployment.yaml
+++ b/charts/agent/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       {{- if .Values.delegatedAgentDeployment.deployment.nodeSelector }}
       nodeSelector:
-        {{ toYaml .Values.delegatedAgentDeployment.deployment.nodeSelector | nindent 8 }}
+        {{- toYaml .Values.delegatedAgentDeployment.deployment.nodeSelector | nindent 8 }}
       {{- end }}
       affinity:
       {{- if .Values.delegatedAgentDeployment.deployment.affinity }}
