--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -264,7 +264,7 @@ nodeAnalyzer:
     probesPort: 7002
     image:
       repository: sysdig/vuln-runtime-scanner
-      tag: 1.4.12
+      tag: "1.5"
       digest:
       pullPolicy: IfNotPresent
     storageClassName:
