--- a/charts/admission-controller/templates/scanner/deployment.yaml
+++ b/charts/admission-controller/templates/scanner/deployment.yaml
@@ -22,12 +22,12 @@ spec:
       labels:
         {{- include "admissionController.scanner.labels" . | nindent 8 }}
     spec:
-      {{- if .Values.global.image.pullSecrets }}
-      imagePullSecrets:
-        {{- toYaml .Values.global.image.pullSecrets | nindent 8 }}
-      {{- else if .Values.scanner.imagePullSecrets }}
+      {{- if .Values.scanner.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml .Values.scanner.imagePullSecrets | nindent 8 }}
+      {{- else if .Values.global.image.pullSecrets }}
+      imagePullSecrets:
+        {{- toYaml .Values.global.image.pullSecrets | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "admissionController.scanner.serviceAccountName" . }}
       securityContext:
@@ -73,7 +73,7 @@ spec:
             - --auth_secure_token
             {{- end }}
           {{- end }}
-          imagePullPolicy: {{ .Values.global.image.pullPolicy | default .Values.scanner.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.scanner.image.pullPolicy | default .Values.global.image.pullPolicy }}
           env:
             {{- if (or (include "scanner.httpProxy" .) (include "scanner.httpsProxy" .) (include "scanner.noProxy" .) )}}
             - name: HTTP_PROXY
