--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -10,7 +10,7 @@ global:
     ephemeralStorage: "500Mi"
   image:
     pullSecrets: []
-    pullPolicy: ""
+    pullPolicy: IfNotPresent
 
 namespace: ""
 
@@ -27,7 +27,7 @@ image:
   # Specify a imagePullPolicy
   # Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   # ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-  pullPolicy: IfNotPresent
+  pullPolicy:
   # Optionally specify an array of imagePullSecrets.
   # Secrets must be manually created in the namespace.
   # ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
