--- a/charts/rapid-response/values.yaml
+++ b/charts/rapid-response/values.yaml
@@ -5,7 +5,7 @@ global:
   proxy: {}
   image:
     pullSecrets: []
-    pullPolicy: ""
+    pullPolicy: IfNotPresent
 
 sysdig:
   # Required: You need your Sysdig access key before running agents, either specifying 'accessKey' here, or using 'existingAccessKeySecret'
@@ -27,7 +27,7 @@ rapidResponse:
 
   image:
     registry: quay.io
-    pullPolicy: IfNotPresent
+    pullPolicy:
     repository: sysdig/rapid-response-host-component
     # If unset, .Chart.AppVersion is used to create tag
     # Note: Image tag must be a string specified in double-quotes
