chore(node-analyzer): bump sysdig/vuln-host-scanner to v0.4

--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -339,7 +339,7 @@ nodeAnalyzer:
 
     image:
       repository: sysdig/vuln-host-scanner
-      tag: 0.3.10
+      tag: "0.4"
       digest:
       pullPolicy: IfNotPresent
 
